# Hieroglyph3-mirror

./: .gitignore  D3D11-Odin-Guide.md  D3D11-Rust-Guide.md
Applications/AmbientOcclusionI/: AmbientOcclusionI_Desktop.vcxproj
Applications/BasicApplication/: BasicApplication_Desktop.vcxproj
Applications/BasicComputeShader/: BasicComputeShader_Desktop.vcxproj
Applications/BasicRenderViews/: BasicRenderViews_Desktop.vcxproj
Applications/BasicScenes/: BasicScenes_Desktop.vcxproj
Applications/BasicScripting/: BasicScripting_Desktop.vcxproj
Applications/BasicTessellation/: BasicTessellation_Desktop.vcxproj
Applications/BasicWindow/: BasicWindow_Desktop.vcxproj
Applications/CurvedPointNormalTriangles/: CurvedPointNormalTriangles_Desktop.vcxproj
Applications/DeferredRendering/: DeferredRendering_Desktop.vcxproj
Applications/Glyphlets/: Glyphlets_Desktop.vcxproj
Applications/ImageProcessor/: ImageProcessor_Desktop.vcxproj
Applications/ImmediateRenderer/: ImmediateRenderer_Desktop.vcxproj
Applications/InterlockingTerrainTiles/: InterlockingTerrainTiles_Desktop.vcxproj
Applications/Kinect2Playground/: Kinect2Playground_Desktop.vcxproj
Applications/KinectPlayground/: KinectPlayground_Desktop.vcxproj
Applications/LightPrepass/: LightPrepass_Desktop.vcxproj
Applications/MFCwithD3D11/: MFCwithD3D11_Desktop.vcxproj
Applications/MirrorMirror/: MirrorMirror_Desktop.vcxproj
Source/: ConsoleWindow.cpp  Hieroglyph3_Desktop.vcxproj  RendererDX11.cpp
odin_port/: .gitattributes  README.md  Row-Major-Plan.md  odrun.bat  run.bat
rust_port/: Cargo.toml  README.md
rust_port/apps/basic_application/: Cargo.toml
rust_port/apps/basic_application/src/: main.rs
rust_port/apps/basic_compute_shader/: Cargo.toml
rust_port/apps/basic_compute_shader/src/: main.rs
rust_port/apps/basic_tessellation/: Cargo.toml
rust_port/apps/basic_tessellation/src/: main.rs  ms3d.rs
rust_port/apps/basic_window/: Cargo.toml
rust_port/apps/basic_window/src/: main.rs
rust_port/apps/image_processor/: Cargo.toml
rust_port/apps/image_processor/src/: main.rs
rust_port/apps/immediate_renderer/: Cargo.toml
rust_port/apps/immediate_renderer/src/: camera.rs  main.rs  mesh.rs  skybox.rs  stl.rs
rust_port/apps/rotating_cube/: Cargo.toml
rust_port/apps/rotating_cube/src/: main.rs
rust_port/apps/tessellation_params/: Cargo.toml
rust_port/apps/tessellation_params/src/: main.rs
rust_port/glyph/: Cargo.toml
rust_port/glyph/src/: lib.rs  paths.rs  renderer.rs  shader.rs  window.rs
(+50 files in other folders)
