[package]
name = "immediate_renderer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust port of the ImmediateRenderer sample (Applications/ImmediateRenderer) - core visual scope"

[dependencies]
glyph.workspace = true
windows.workspace = true
glam.workspace = true
