[package]
name = "tessellation_params"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust port of the TessellationParams sample (Applications/TessellationParams) - state shown in the title bar"

[dependencies]
glyph.workspace = true
windows.workspace = true
glam.workspace = true
